[package]
name = "hustwl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
minreq = {version = "2.2", features = []}
urlencoding = "1.1"